feat: update product-center domain design